<resources>
    <string name="app_name">GameCentre</string>
    <string name="title_activity_login">GameCentre</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="username_number">UserName (Numbers)</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_number">Password (Numbers)</string>
    <string name="your_highest">Your Highest:</string>
    <string name="score">Score:&#160;&#160;&#160;</string>
    <string name="right">right</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="up">up</string>
    <string name="sixteen">16</string>
    <string name="thirtytwo">32</string>
    <string name="sixtyfour">64</string>
    <string name="hundredtwentyeight">128</string>
    <string name="twohundredfiftysix">256</string>
    <string name="fivehundredtwelve">512</string>
    <string name="thousandtwentyfour">1024</string>
    <string name="twothousandfortyeight">2048</string>
    <string name="restart">restart</string>
    <string name="congratulations">Congratulations!!!!!!</string>
    <string name="textview">TextView</string>
    <string name="undo">UNDO</string>
    <string name="show_password">Show password</string>
    <string name="setting">Setting</string>
    <string name="upload_picture">upload picture</string>
    <string name="delete_picture">DELETE PICTURE</string>
    <string name="picture_you_added">Picture you added</string>
    <string name="undo_steps">Undo Steps</string>
    <string name="complexity">Complexity:</string>

</resources>
