<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="40dp"
        android:text="@string/complexity"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/complexitySpinner"
        android:layout_width="100dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/undoSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="537dp"
        android:text="@string/undo_steps"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complexity"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/undoStepsSpinner"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/undoSteps"
        app:layout_constraintTop_toBottomOf="@+id/complexitySpinner" />

    <Button
        android:id="@+id/UploadButton"
        android:layout_width="146dp"
        android:layout_height="72dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="31dp"
        android:text="@string/upload_picture"
        app:layout_constraintEnd_toStartOf="@+id/deletebutton"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complexity" />

    <Button
        android:id="@+id/deletebutton"
        android:layout_width="146dp"
        android:layout_height="72dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="31dp"
        android:text="@string/delete_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UploadButton"
        app:layout_constraintTop_toBottomOf="@+id/undoStepsSpinner" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="292dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UploadButton"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:color/transparent" />

    <TextView
        android:id="@+id/added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="305dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="1dp"
        android:text="@string/picture_you_added"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/added"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletebutton" />


</android.support.constraint.ConstraintLayout>



